# ADamGoodGame

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
saves/NewGame/: Base.txt  Town.txt  Woods.txt  gameData.txt
saves/curr/: Base.txt  Town.txt  Woods.txt
saves/data/: High_Scores.txt  UserSettings.txt
src/: main.cpp
src/Menu/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp  MenuAssetLoading.cpp  PlayerData.cpp  PlayerData.hpp
src/engine/: GameMath.cpp  GameMath.hpp  LAudio.cpp  LAudio.hpp  LTexture.cpp  LTexture.hpp  LTimer.cpp  LTimer.hpp  LWindow.cpp  LWindow.hpp  TextureManipulator.cpp  TextureManipulator.hpp
src/game/: CellTypes.hpp  Dialogue.cpp  Dialogue.hpp  Game.cpp  Game.hpp  Grid.cpp  Render.cpp  Scene.cpp  Scene.hpp  assetLoading.cpp
src/gameObject/: AStarPathfinding.cpp  AStarPathfinding.hpp  Animations.cpp  Animations.hpp  Bird.cpp  Bird.hpp  Bomb.cpp  Bomb.hpp  CosmeticGameObjects.cpp  CosmeticGameObjects.hpp  GameObject.cpp  GameObject.hpp  Item.cpp  Item.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp  Wolf.cpp  Wolf.hpp
